--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -793,11 +793,11 @@
    "source": [
     "# Os gráficos funcionam dentro da lógica do matplotlib\n",
     "plt.close('all')\n",
-    "plt.rc('figure', figsize=(9, 6))\n",
-    "fig, axes = plt.subplots(2, 2)\n",
+    "plt.rc('figure', figsize=(9, 6)) # define o tamanho da figura\n",
+    "fig, axes = plt.subplots(2, 2) # define quantos gráficos vão ter dentro da área da figura\n",
     "\n",
-    "sns.countplot(ax=axes[0, 0], x='day', data=tips)\n",
-    "sns.barplot(ax=axes[0, 1], x='day', y='tip_pct', data=tips)\n",
+    "sns.countplot(ax=axes[0, 0], x='day', data=tips) # grafico de contagem\n",
+    "sns.barplot(ax=axes[0, 1], x='day', y='tip_pct', data=tips) # graficos de barra\n",
     "sns.barplot(ax=axes[1, 0], x='day', y='tip', data=tips)\n",
     "sns.barplot(ax=axes[1, 1], x='day', y='tip', data=tips, estimator=sum, ci=None)\n",
     "\n",
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -966,25 +966,18 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "ax.bar(df.index, df['contagem'])\n",
-    "ax2 = ax.twinx()\n",
-    "ax2.plot(df.index, df[\"pctacum\"], color=\"r\", marker=\"o\")\n",
-    "ax2.yaxis.set_major_formatter(PercentFormatter())\n",
+    "ax.bar(df.index, df['contagem']) # define o gráfico de barra no eixo x\n",
+    "ax2 = ax.twinx() # cria a linha de acumulo de porcentagem no eixo x\n",
+    "ax2.plot(df.index, df[\"pctacum\"], color=\"r\", marker=\"o\") # define o segundo gráfico no eixo x\n",
+    "ax2.yaxis.set_major_formatter(PercentFormatter()) # formata o eixo y em porcentagem\n",
     "\n",
-    "ax.tick_params(axis='x', rotation=45)\n",
-    "ax2.tick_params(axis='y', colors='r')\n",
-    "plt.title(label='Reclamações por Categoria')\n",
-    "plt.grid(linestyle='--', linewidth=0.7, animated=True)\n",
+    "ax.tick_params(axis='x', rotation=45) # rotação das labels do eixo x\n",
+    "ax2.tick_params(axis='y', colors='r') # cor da porcentagem do eixo y\n",
+    "plt.title(label='Reclamações por Categoria') # título do gráfico\n",
+    "plt.grid(linestyle='--', linewidth=0.7) # muda o formato da linha de grade e define uma transparência\n",
     "\n",
-    "plt.show()"
+    "plt.show() # plota o gráfico"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
