--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_exercicios_1.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_exercicios_1.ipynb
@@ -11,10 +11,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ORIGEM</th>\n",
+       "      <th>CODESTAB</th>\n",
+       "      <th>CODMUNNASC</th>\n",
+       "      <th>LOCNASC</th>\n",
+       "      <th>IDADEMAE</th>\n",
+       "      <th>ESTCIVMAE</th>\n",
+       "      <th>ESCMAE</th>\n",
+       "      <th>CODOCUPMAE</th>\n",
+       "      <th>QTDFILVIVO</th>\n",
+       "      <th>QTDFILMORT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>KOTELCHUCK</th>\n",
+       "      <th>CONTADOR</th>\n",
+       "      <th>munResStatus</th>\n",
+       "      <th>munResTipo</th>\n",
+       "      <th>munResNome</th>\n",
+       "      <th>munResUf</th>\n",
+       "      <th>munResLat</th>\n",
+       "      <th>munResLon</th>\n",
+       "      <th>munResAlt</th>\n",
+       "      <th>munResArea</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2679477.0</td>\n",
+       "      <td>110001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ATIVO</td>\n",
+       "      <td>MUNIC</td>\n",
+       "      <td>Alta Floresta D'Oeste</td>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>-11.93554</td>\n",
+       "      <td>-61.99982</td>\n",
+       "      <td>338.0</td>\n",
+       "      <td>7067.025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2679477.0</td>\n",
+       "      <td>110001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>999992.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ATIVO</td>\n",
+       "      <td>MUNIC</td>\n",
+       "      <td>Alta Floresta D'Oeste</td>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>-11.93554</td>\n",
+       "      <td>-61.99982</td>\n",
+       "      <td>338.0</td>\n",
+       "      <td>7067.025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2679477.0</td>\n",
+       "      <td>110001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>513205.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ATIVO</td>\n",
+       "      <td>MUNIC</td>\n",
+       "      <td>Alta Floresta D'Oeste</td>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>-11.93554</td>\n",
+       "      <td>-61.99982</td>\n",
+       "      <td>338.0</td>\n",
+       "      <td>7067.025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2516500.0</td>\n",
+       "      <td>110001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12 anos ou mais</td>\n",
+       "      <td>231205.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ATIVO</td>\n",
+       "      <td>MUNIC</td>\n",
+       "      <td>Alto Alegre dos Parecis</td>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>-12.13178</td>\n",
+       "      <td>-61.85308</td>\n",
+       "      <td>397.0</td>\n",
+       "      <td>3958.273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2516500.0</td>\n",
+       "      <td>110001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>999992.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ATIVO</td>\n",
+       "      <td>MUNIC</td>\n",
+       "      <td>Alta Floresta D'Oeste</td>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>-11.93554</td>\n",
+       "      <td>-61.99982</td>\n",
+       "      <td>338.0</td>\n",
+       "      <td>7067.025</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 69 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ORIGEM   CODESTAB  CODMUNNASC  LOCNASC  IDADEMAE  ESTCIVMAE  \\\n",
+       "0       1  2679477.0      110001        1        19        5.0   \n",
+       "1       1  2679477.0      110001        1        29        2.0   \n",
+       "2       1  2679477.0      110001        1        37        9.0   \n",
+       "3       1  2516500.0      110001        1        30        5.0   \n",
+       "4       1  2516500.0      110001        1        30        2.0   \n",
+       "\n",
+       "            ESCMAE  CODOCUPMAE  QTDFILVIVO  QTDFILMORT  ...  KOTELCHUCK  \\\n",
+       "0      8 a 11 anos         NaN         0.0         0.0  ...           5   \n",
+       "1      8 a 11 anos    999992.0         1.0         0.0  ...           5   \n",
+       "2      8 a 11 anos    513205.0         2.0         0.0  ...           5   \n",
+       "3  12 anos ou mais    231205.0         0.0         0.0  ...           4   \n",
+       "4      8 a 11 anos    999992.0         1.0         0.0  ...           5   \n",
+       "\n",
+       "  CONTADOR munResStatus munResTipo               munResNome  munResUf  \\\n",
+       "0        1        ATIVO      MUNIC    Alta Floresta D'Oeste  Rondônia   \n",
+       "1        2        ATIVO      MUNIC    Alta Floresta D'Oeste  Rondônia   \n",
+       "2        3        ATIVO      MUNIC    Alta Floresta D'Oeste  Rondônia   \n",
+       "3        4        ATIVO      MUNIC  Alto Alegre dos Parecis  Rondônia   \n",
+       "4        5        ATIVO      MUNIC    Alta Floresta D'Oeste  Rondônia   \n",
+       "\n",
+       "   munResLat munResLon  munResAlt  munResArea  \n",
+       "0  -11.93554 -61.99982      338.0    7067.025  \n",
+       "1  -11.93554 -61.99982      338.0    7067.025  \n",
+       "2  -11.93554 -61.99982      338.0    7067.025  \n",
+       "3  -12.13178 -61.85308      397.0    3958.273  \n",
+       "4  -11.93554 -61.99982      338.0    7067.025  \n",
+       "\n",
+       "[5 rows x 69 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('./input/SINASC_RO_2019.csv')\n",
+    "df.head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.10.5"
   },
   "vscode": {
    "interpreter": {
