--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_exercicios_1.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_exercicios_1.ipynb
@@ -20,7 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('./input/SINASC_2019.csv', sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -55,184 +64,208 @@
        "      <th>QTDFILVIVO</th>\n",
        "      <th>QTDFILMORT</th>\n",
        "      <th>...</th>\n",
+       "      <th>TPDOCRESP</th>\n",
+       "      <th>DTDECLARAC</th>\n",
+       "      <th>ESCMAEAGR1</th>\n",
+       "      <th>STDNEPIDEM</th>\n",
+       "      <th>STDNNOVA</th>\n",
+       "      <th>CODPAISRES</th>\n",
+       "      <th>TPROBSON</th>\n",
+       "      <th>PARIDADE</th>\n",
        "      <th>KOTELCHUCK</th>\n",
        "      <th>CONTADOR</th>\n",
-       "      <th>munResStatus</th>\n",
-       "      <th>munResTipo</th>\n",
-       "      <th>munResNome</th>\n",
-       "      <th>munResUf</th>\n",
-       "      <th>munResLat</th>\n",
-       "      <th>munResLon</th>\n",
-       "      <th>munResAlt</th>\n",
-       "      <th>munResArea</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>2679477.0</td>\n",
-       "      <td>110001</td>\n",
+       "      <td>2515504.0</td>\n",
+       "      <td>110002</td>\n",
        "      <td>1</td>\n",
-       "      <td>19</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>8 a 11 anos</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>999992.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>ATIVO</td>\n",
-       "      <td>MUNIC</td>\n",
-       "      <td>Alta Floresta D'Oeste</td>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>-11.93554</td>\n",
-       "      <td>-61.99982</td>\n",
-       "      <td>338.0</td>\n",
-       "      <td>7067.025</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>2679477.0</td>\n",
-       "      <td>110001</td>\n",
+       "      <td>2516292.0</td>\n",
+       "      <td>110015</td>\n",
        "      <td>1</td>\n",
-       "      <td>29</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>8 a 11 anos</td>\n",
-       "      <td>999992.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>621005.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>27042019.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>ATIVO</td>\n",
-       "      <td>MUNIC</td>\n",
-       "      <td>Alta Floresta D'Oeste</td>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>-11.93554</td>\n",
-       "      <td>-61.99982</td>\n",
-       "      <td>338.0</td>\n",
-       "      <td>7067.025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5430</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>2679477.0</td>\n",
-       "      <td>110001</td>\n",
+       "      <td>5618347.0</td>\n",
+       "      <td>110020</td>\n",
        "      <td>1</td>\n",
-       "      <td>37</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>8 a 11 anos</td>\n",
-       "      <td>513205.0</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>621005.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>26012019.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>ATIVO</td>\n",
-       "      <td>MUNIC</td>\n",
-       "      <td>Alta Floresta D'Oeste</td>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>-11.93554</td>\n",
-       "      <td>-61.99982</td>\n",
-       "      <td>338.0</td>\n",
-       "      <td>7067.025</td>\n",
+       "      <td>6228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>2516500.0</td>\n",
-       "      <td>110001</td>\n",
+       "      <td>5618347.0</td>\n",
+       "      <td>110020</td>\n",
        "      <td>1</td>\n",
-       "      <td>30</td>\n",
+       "      <td>26.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>12 anos ou mais</td>\n",
-       "      <td>231205.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2032019.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>ATIVO</td>\n",
-       "      <td>MUNIC</td>\n",
-       "      <td>Alto Alegre dos Parecis</td>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>-12.13178</td>\n",
-       "      <td>-61.85308</td>\n",
-       "      <td>397.0</td>\n",
-       "      <td>3958.273</td>\n",
+       "      <td>7059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>2516500.0</td>\n",
-       "      <td>110001</td>\n",
+       "      <td>5618347.0</td>\n",
+       "      <td>110020</td>\n",
        "      <td>1</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>8 a 11 anos</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>999992.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>ATIVO</td>\n",
-       "      <td>MUNIC</td>\n",
-       "      <td>Alta Floresta D'Oeste</td>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>-11.93554</td>\n",
-       "      <td>-61.99982</td>\n",
-       "      <td>338.0</td>\n",
-       "      <td>7067.025</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>30032019.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7284</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 69 columns</p>\n",
+       "<p>5 rows × 61 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ORIGEM   CODESTAB  CODMUNNASC  LOCNASC  IDADEMAE  ESTCIVMAE  \\\n",
-       "0       1  2679477.0      110001        1        19        5.0   \n",
-       "1       1  2679477.0      110001        1        29        2.0   \n",
-       "2       1  2679477.0      110001        1        37        9.0   \n",
-       "3       1  2516500.0      110001        1        30        5.0   \n",
-       "4       1  2516500.0      110001        1        30        2.0   \n",
+       "   ORIGEM   CODESTAB  CODMUNNASC  LOCNASC  IDADEMAE  ESTCIVMAE  ESCMAE  \\\n",
+       "0       1  2515504.0      110002        1      31.0        2.0     5.0   \n",
+       "1       1  2516292.0      110015        1      34.0        4.0     4.0   \n",
+       "2       1  5618347.0      110020        1      35.0        2.0     4.0   \n",
+       "3       1  5618347.0      110020        1      26.0        5.0     5.0   \n",
+       "4       1  5618347.0      110020        1      23.0        5.0     3.0   \n",
        "\n",
-       "            ESCMAE  CODOCUPMAE  QTDFILVIVO  QTDFILMORT  ...  KOTELCHUCK  \\\n",
-       "0      8 a 11 anos         NaN         0.0         0.0  ...           5   \n",
-       "1      8 a 11 anos    999992.0         1.0         0.0  ...           5   \n",
-       "2      8 a 11 anos    513205.0         2.0         0.0  ...           5   \n",
-       "3  12 anos ou mais    231205.0         0.0         0.0  ...           4   \n",
-       "4      8 a 11 anos    999992.0         1.0         0.0  ...           5   \n",
+       "   CODOCUPMAE  QTDFILVIVO  QTDFILMORT  ...  TPDOCRESP  DTDECLARAC  ESCMAEAGR1  \\\n",
+       "0    999992.0         1.0         0.0  ...        0.0         NaN         8.0   \n",
+       "1    621005.0         1.0         0.0  ...        3.0  27042019.0        12.0   \n",
+       "2    621005.0         1.0         0.0  ...        3.0  26012019.0        12.0   \n",
+       "3         NaN         1.0         NaN  ...        3.0   2032019.0         7.0   \n",
+       "4    999992.0         4.0         0.0  ...        3.0  30032019.0         2.0   \n",
        "\n",
-       "  CONTADOR munResStatus munResTipo               munResNome  munResUf  \\\n",
-       "0        1        ATIVO      MUNIC    Alta Floresta D'Oeste  Rondônia   \n",
-       "1        2        ATIVO      MUNIC    Alta Floresta D'Oeste  Rondônia   \n",
-       "2        3        ATIVO      MUNIC    Alta Floresta D'Oeste  Rondônia   \n",
-       "3        4        ATIVO      MUNIC  Alto Alegre dos Parecis  Rondônia   \n",
-       "4        5        ATIVO      MUNIC    Alta Floresta D'Oeste  Rondônia   \n",
+       "   STDNEPIDEM  STDNNOVA  CODPAISRES  TPROBSON  PARIDADE  KOTELCHUCK  CONTADOR  \n",
+       "0         0.0         1         1.0         5         1           5      1018  \n",
+       "1         0.0         1         1.0         5         1           5      5430  \n",
+       "2         0.0         1         1.0         4         1           5      6228  \n",
+       "3         0.0         1         1.0         5         1           4      7059  \n",
+       "4         0.0         1         1.0         3         1           2      7284  \n",
        "\n",
-       "   munResLat munResLon  munResAlt  munResArea  \n",
-       "0  -11.93554 -61.99982      338.0    7067.025  \n",
-       "1  -11.93554 -61.99982      338.0    7067.025  \n",
-       "2  -11.93554 -61.99982      338.0    7067.025  \n",
-       "3  -12.13178 -61.85308      397.0    3958.273  \n",
-       "4  -11.93554 -61.99982      338.0    7067.025  \n",
-       "\n",
-       "[5 rows x 69 columns]"
+       "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('./input/SINASC_RO_2019.csv')\n",
     "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ORIGEM', 'CODESTAB', 'CODMUNNASC', 'LOCNASC', 'IDADEMAE', 'ESTCIVMAE',\n",
+       "       'ESCMAE', 'CODOCUPMAE', 'QTDFILVIVO', 'QTDFILMORT', 'CODMUNRES',\n",
+       "       'GESTACAO', 'GRAVIDEZ', 'PARTO', 'CONSULTAS', 'DTNASC', 'HORANASC',\n",
+       "       'SEXO', 'APGAR1', 'APGAR5', 'RACACOR', 'PESO', 'IDANOMAL', 'DTCADASTRO',\n",
+       "       'CODANOMAL', 'NUMEROLOTE', 'VERSAOSIST', 'DTRECEBIM', 'DIFDATA',\n",
+       "       'DTRECORIGA', 'NATURALMAE', 'CODMUNNATU', 'CODUFNATU', 'ESCMAE2010',\n",
+       "       'SERIESCMAE', 'DTNASCMAE', 'RACACORMAE', 'QTDGESTANT', 'QTDPARTNOR',\n",
+       "       'QTDPARTCES', 'IDADEPAI', 'DTULTMENST', 'SEMAGESTAC', 'TPMETESTIM',\n",
+       "       'CONSPRENAT', 'MESPRENAT', 'TPAPRESENT', 'STTRABPART', 'STCESPARTO',\n",
+       "       'TPNASCASSI', 'TPFUNCRESP', 'TPDOCRESP', 'DTDECLARAC', 'ESCMAEAGR1',\n",
+       "       'STDNEPIDEM', 'STDNNOVA', 'CODPAISRES', 'TPROBSON', 'PARIDADE',\n",
+       "       'KOTELCHUCK', 'CONTADOR'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
