--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_exercicios_1.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_exercicios_1.ipynb
@@ -36,6 +36,7 @@
     }
    ],
    "source": [
+    "# df = pd.read_csv('./SINASC_2019.csv', sep=';')\n",
     "df = pd.read_csv('./input/SINASC_2019.csv', sep=';')"
    ]
   },
