--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -1683,7 +1683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.3 Boxplot e histograma"
+    "## 6.4 Boxplot e histograma"
    ]
   },
   {
@@ -2122,6 +2122,21 @@
     "# box plot seaborn\n",
     "sns.boxplot(y='total_bill', data=tips[tips['tip_pct'] < 1])"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.5 Seborn e Bivariadas discretas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
