--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_exercicios_3.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_exercicios_3.ipynb
@@ -1156,6 +1156,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pela análise desse gráfico o peso tem uma boa influência no APGAR5 no começo da gestacão até 31 semanas como foi observado acima quando citei que poderia ter uma outra variável, mas de 32 semanas de gestação em diante o peso não tem tanta influência assim no APGAR5."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 130,
    "metadata": {},
