--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -3440,6 +3440,47 @@
     "g.map_diag(sns.histplot, kde=True)\n",
     "g.add_legend(title='Análise Por Espécie', adjust_subtitles=True)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.1 Introdução a árvores de decisão"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Inteligência artificial (IA se refere à simulação da inteligência humana em máquinas programadas para pensar como humanos e imitar suas ações)\n",
+    "    \n",
+    "    - Machine Learning (Técnica dentro de inteligência artificial, se refere ao conceito de que progrmas de computador podem aprender automaticamente e se adaptar a novos dados sem serem assistidos por humanos)\n",
+    "    \n",
+    "        -  Modelo Supervisionado (É uma abordagem de aprendizado de máquina definida pelo uso de conjuntos de dados com rótulos (target). Esses conjuntos de dados são projetados para treinar algoritimos para classificar dados ou prever resultados)\n",
+    "            \n",
+    "            - Classificação (São usados quando a variável resposta (target) é discreta, categorizado, com classes, exemplos: Classificar um email em spam ou não spam, classificar um cliente em bom ou mau pagador, classificar a qualidade de uma peça entre baixa, média, alta etc.)\n",
+    "\n",
+    "            - Regressão (São usados quando a variável resposta (target) é um valor numérico continuo, exemplos: Previsão de vendas, previsão de receita, previsão de temperatura, preço de aluguel etc.)\n",
+    "        \n",
+    "        -  Modelo Não Supervisionado (É uma abordagem de aprendizado de maquina que usa algoritimos de aprendizado de máquina para analisar e agrupar conjuntos de dados não rotulados. Esses algoritimos descobrem padrões ocultos nos dados)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Árvore de decisão (DT) é um método de aprendizado que usa regras de decisão simples inferidas a partir dos dados (Se aplica tanto no modelo de Classificação quanto no de Regressão)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
