--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -3479,6 +3479,15 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 7.2 Carregando e tratando os dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
