--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
@@ -1954,6 +1954,21 @@
    "source": [
     "x"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.3 Melhor valor e variável para quebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
