--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
@@ -2869,6 +2869,26 @@
     "# soma os dois calculos\n",
     "print(calc_cut_45_1 + calc_cut_45_0, g45, v45.sum())"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7.5 Overfitting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
