--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
@@ -2884,6 +2884,12 @@
    "source": []
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2907,7 +2913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  5 2022, 01:53:17) \n[Clang 12.0.0 ]"
   },
   "vscode": {
    "interpreter": {
